feat: implement validation
